[tool.poetry]
name = "repl_nix_myProjects"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
Flask-Login = "^0.6.2"
Flask-Bcrypt = "^1.0.1"
Flask = "^2.3.2"
Flask-Cors = "^3.0.10"
Flask-Mail = "^0.9.1"
Pillow = "^9.5.0"
Flask-SQLAlchemy = "^3.0.3"
Flask-WTF = "^1.1.1"
itsdangerous = "^2.1.2"
WTForms = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
